dropout step and epochs

--- a/Notebooks/hyperparams.ipynb
+++ b/Notebooks/hyperparams.ipynb
@@ -25,11 +25,11 @@
         "!pip install tensorflow_addons"
       ],
       "metadata": {
-        "id": "7yUNHf_Vsxu2",
-        "outputId": "4e9f772c-215a-40a1-d2b0-0e0447ec9aef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7yUNHf_Vsxu2",
+        "outputId": "4e9f772c-215a-40a1-d2b0-0e0447ec9aef"
       },
       "execution_count": 25,
       "outputs": [
@@ -218,11 +218,11 @@
         "!wget https://raw.githubusercontent.com/ML-Bioinfo-CEITEC/miRBind/tuning/Datasets/evaluation_set_1_100_CLASH2013_paper.tsv -P ../Datasets/"
       ],
       "metadata": {
-        "id": "nSuBm8RnpdD0",
-        "outputId": "9f141c41-700b-4168-f1ca-118e8412f58b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nSuBm8RnpdD0",
+        "outputId": "9f141c41-700b-4168-f1ca-118e8412f58b"
       },
       "execution_count": 16,
       "outputs": [
@@ -330,9 +330,9 @@
         "                       dtype='float32', name='main_input'\n",
         "                       )\n",
         "\n",
-        "    cnn_num = hp.Int('conv_blocks', 2, 7, default=3)\n",
-        "    kernel_size = hp.Int('kernel_size', 3, 7, default=3)\n",
-        "    pool_size = hp.Int('pool_size', 2, 6, default=2)\n",
+        "    cnn_num = hp.Int('conv_blocks', 2, 6, default=3)\n",
+        "    kernel_size = hp.Int('kernel_size', 3, 6, default=3)\n",
+        "    pool_size = hp.Int('pool_size', 2, 5, default=2)\n",
         "    dropout_rate = hp.Float('dropout', 0, 0.6, step=0.05, default=0.25)\n",
         "    # max the same number of dense layers as is the number of cnn layers\n",
         "    dense_num = hp.Int('dense_blocks', 2, cnn_num, default=3)\n",
@@ -425,8 +425,11 @@
         "\n",
         "  tuner.search(train_ohe, train_labels,\n",
         "             validation_data=(val_ohe, val_labels),\n",
-        "             epochs=30,\n",
-        "             callbacks=[tf.keras.callbacks.EarlyStopping(patience=3)])\n",
+        "             epochs=10,\n",
+        "             callbacks=[tf.keras.callbacks.EarlyStopping(patience=3)],\n",
+        "             batch_size=32,\n",
+        "            class_weight={0: 1, 1: ratio}\n",
+        "  )\n",
         "  \n",
         "  print(\"Best params for ratio\", ratio, \" are: \", tuner.get_best_hyperparameters(1)[0])\n",
         "\n",
@@ -434,11 +437,11 @@
         "  best_model.save(\"model_1_\" + str(ratio) + \".h5\")"
       ],
       "metadata": {
-        "id": "dNxA2f-lwKjZ",
-        "outputId": "3fd4ee6d-5f0c-4403-c637-e927f60e47a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dNxA2f-lwKjZ",
+        "outputId": "3fd4ee6d-5f0c-4403-c637-e927f60e47a1"
       },
       "execution_count": null,
       "outputs": [
@@ -446,28 +449,33 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Trial 3 Complete [00h 00m 42s]\n",
-            "val_prc: 0.8836684823036194\n",
+            "Trial 68 Complete [00h 01m 27s]\n",
+            "val_prc: 0.9222705364227295\n",
             "\n",
-            "Best val_prc So Far: 0.9067587852478027\n",
-            "Total elapsed time: 00h 01m 47s\n",
+            "Best val_prc So Far: 0.9442317485809326\n",
+            "Total elapsed time: 00h 46m 37s\n",
             "\n",
-            "Search: Running Trial #4\n",
+            "Search: Running Trial #69\n",
             "\n",
             "Hyperparameter    |Value             |Best Value So Far \n",
-            "conv_blocks       |2                 |4                 \n",
-            "kernel_size       |4                 |5                 \n",
-            "pool_size         |3                 |4                 \n",
-            "dropout           |0.6               |0.1               \n",
-            "dense_blocks      |2                 |2                 \n",
-            "learning_rate     |0.0040804         |0.0018925         \n",
-            "tuner/epochs      |2                 |2                 \n",
-            "tuner/initial_e...|0                 |0                 \n",
-            "tuner/bracket     |3                 |3                 \n",
-            "tuner/round       |0                 |0                 \n",
+            "conv_blocks       |3                 |5                 \n",
+            "kernel_size       |4                 |6                 \n",
+            "pool_size         |5                 |5                 \n",
+            "dropout           |0.1               |0.5               \n",
+            "dense_blocks      |2                 |3                 \n",
+            "learning_rate     |0.0060713         |0.00065915        \n",
+            "tuner/epochs      |10                |30                \n",
+            "tuner/initial_e...|4                 |10                \n",
+            "tuner/bracket     |2                 |3                 \n",
+            "tuner/round       |1                 |3                 \n",
+            "tuner/trial_id    |fbf57473180be3e...|55e36025a0b211c...\n",
             "\n",
-            "Epoch 1/2\n",
-            "945/962 [============================>.] - ETA: 0s - loss: 0.5784 - accuracy: 0.7151 - f1_score: 0.7118 - prc: 0.7693"
+            "Epoch 5/10\n",
+            "962/962 [==============================] - 10s 9ms/step - loss: 0.4940 - accuracy: 0.7693 - f1_score: 0.7676 - prc: 0.8416 - val_loss: 0.4291 - val_accuracy: 0.8120 - val_f1_score: 0.8105 - val_prc: 0.8903\n",
+            "Epoch 6/10\n",
+            "962/962 [==============================] - 9s 9ms/step - loss: 0.4341 - accuracy: 0.8047 - f1_score: 0.8025 - prc: 0.8841 - val_loss: 0.5015 - val_accuracy: 0.7575 - val_f1_score: 0.7953 - val_prc: 0.8977\n",
+            "Epoch 7/10\n",
+            "  1/962 [..............................] - ETA: 11s - loss: 0.4364 - accuracy: 0.8438 - f1_score: 0.8485 - prc: 0.7826"
           ]
         }
       ]
