--- a/Notebooks/hyperparams.ipynb
+++ b/Notebooks/hyperparams.ipynb
@@ -420,8 +420,8 @@
         "    project_name='miRBind_' + str(ratio)\n",
         "  )\n",
         "\n",
-        "  train_ohe, train_labels = load_data(1, train=True)\n",
-        "  val_ohe, val_labels = load_data(1, train=False)\n",
+        "  train_ohe, train_labels = load_data(ratio, train=True)\n",
+        "  val_ohe, val_labels = load_data(ratio, train=False)\n",
         "\n",
         "  tuner.search(train_ohe, train_labels,\n",
         "             validation_data=(val_ohe, val_labels),\n",
@@ -441,7 +441,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dNxA2f-lwKjZ",
-        "outputId": "3fd4ee6d-5f0c-4403-c637-e927f60e47a1"
+        "outputId": "2796eb90-c0fa-486a-add6-13de3f3cdd2a"
       },
       "execution_count": null,
       "outputs": [
@@ -449,33 +449,46 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Trial 68 Complete [00h 01m 27s]\n",
-            "val_prc: 0.9222705364227295\n",
+            "Trial 85 Complete [00h 01m 49s]\n",
+            "val_prc: 0.926300585269928\n",
             "\n",
             "Best val_prc So Far: 0.9442317485809326\n",
-            "Total elapsed time: 00h 46m 37s\n",
+            "Total elapsed time: 01h 13m 42s\n",
             "\n",
-            "Search: Running Trial #69\n",
+            "Search: Running Trial #86\n",
             "\n",
             "Hyperparameter    |Value             |Best Value So Far \n",
-            "conv_blocks       |3                 |5                 \n",
-            "kernel_size       |4                 |6                 \n",
+            "conv_blocks       |2                 |5                 \n",
+            "kernel_size       |3                 |6                 \n",
             "pool_size         |5                 |5                 \n",
-            "dropout           |0.1               |0.5               \n",
-            "dense_blocks      |2                 |3                 \n",
-            "learning_rate     |0.0060713         |0.00065915        \n",
-            "tuner/epochs      |10                |30                \n",
-            "tuner/initial_e...|4                 |10                \n",
-            "tuner/bracket     |2                 |3                 \n",
-            "tuner/round       |1                 |3                 \n",
-            "tuner/trial_id    |fbf57473180be3e...|55e36025a0b211c...\n",
+            "dropout           |0                 |0.5               \n",
+            "dense_blocks      |3                 |3                 \n",
+            "learning_rate     |0.00049429        |0.00065915        \n",
+            "tuner/epochs      |30                |30                \n",
+            "tuner/initial_e...|0                 |10                \n",
+            "tuner/bracket     |0                 |3                 \n",
+            "tuner/round       |0                 |3                 \n",
             "\n",
-            "Epoch 5/10\n",
-            "962/962 [==============================] - 10s 9ms/step - loss: 0.4940 - accuracy: 0.7693 - f1_score: 0.7676 - prc: 0.8416 - val_loss: 0.4291 - val_accuracy: 0.8120 - val_f1_score: 0.8105 - val_prc: 0.8903\n",
-            "Epoch 6/10\n",
-            "962/962 [==============================] - 9s 9ms/step - loss: 0.4341 - accuracy: 0.8047 - f1_score: 0.8025 - prc: 0.8841 - val_loss: 0.5015 - val_accuracy: 0.7575 - val_f1_score: 0.7953 - val_prc: 0.8977\n",
-            "Epoch 7/10\n",
-            "  1/962 [..............................] - ETA: 11s - loss: 0.4364 - accuracy: 0.8438 - f1_score: 0.8485 - prc: 0.7826"
+            "Epoch 1/30\n",
+            "962/962 [==============================] - 9s 8ms/step - loss: 0.6932 - accuracy: 0.5008 - f1_score: 0.6099 - prc: 0.4969 - val_loss: 0.6931 - val_accuracy: 0.5000 - val_f1_score: 0.0000e+00 - val_prc: 0.5000\n",
+            "Epoch 2/30\n",
+            "962/962 [==============================] - 7s 8ms/step - loss: 0.6932 - accuracy: 0.4993 - f1_score: 0.2281 - prc: 0.4997 - val_loss: 0.6931 - val_accuracy: 0.5000 - val_f1_score: 0.0000e+00 - val_prc: 0.5000\n",
+            "Epoch 3/30\n",
+            "962/962 [==============================] - 7s 7ms/step - loss: 0.6932 - accuracy: 0.4935 - f1_score: 0.3563 - prc: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5000 - val_f1_score: 0.6667 - val_prc: 0.5000\n",
+            "Epoch 4/30\n",
+            "962/962 [==============================] - 7s 8ms/step - loss: 0.6932 - accuracy: 0.4945 - f1_score: 0.5181 - prc: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5000 - val_f1_score: 0.6667 - val_prc: 0.5000\n",
+            "Epoch 5/30\n",
+            "962/962 [==============================] - 7s 7ms/step - loss: 0.6932 - accuracy: 0.4990 - f1_score: 0.3845 - prc: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5000 - val_f1_score: 0.6667 - val_prc: 0.5000\n",
+            "Epoch 6/30\n",
+            "962/962 [==============================] - 7s 8ms/step - loss: 0.6932 - accuracy: 0.4982 - f1_score: 0.3796 - prc: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5000 - val_f1_score: 0.6667 - val_prc: 0.5000\n",
+            "Epoch 7/30\n",
+            "962/962 [==============================] - 7s 7ms/step - loss: 0.6932 - accuracy: 0.4962 - f1_score: 0.6301 - prc: 0.4966 - val_loss: 0.6931 - val_accuracy: 0.5000 - val_f1_score: 0.0000e+00 - val_prc: 0.5000\n",
+            "Epoch 8/30\n",
+            "962/962 [==============================] - 7s 8ms/step - loss: 0.6932 - accuracy: 0.4986 - f1_score: 0.5063 - prc: 0.4969 - val_loss: 0.6931 - val_accuracy: 0.5000 - val_f1_score: 0.6667 - val_prc: 0.5000\n",
+            "Epoch 9/30\n",
+            "962/962 [==============================] - 7s 7ms/step - loss: 0.6932 - accuracy: 0.4967 - f1_score: 0.6035 - prc: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5000 - val_f1_score: 0.0000e+00 - val_prc: 0.5000\n",
+            "Epoch 10/30\n",
+            "202/962 [=====>........................] - ETA: 5s - loss: 0.6931 - accuracy: 0.5057 - f1_score: 0.0000e+00 - prc: 0.4943"
           ]
         }
       ]
