--- a/Notebooks/hyperparams.ipynb
+++ b/Notebooks/hyperparams.ipynb
@@ -31,7 +31,7 @@
         "id": "7yUNHf_Vsxu2",
         "outputId": "8d6e58c1-d5c1-4006-f16e-5cd52f7ae15f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "TlgiYZ-yOhpH"
       },
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "RlIxFZ0POhpL"
       },
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "psqRgujqOhpK"
       },
@@ -206,7 +206,7 @@
       "metadata": {
         "id": "x68rhGGtpK2s"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,7 +229,7 @@
         "id": "nSuBm8RnpdD0",
         "outputId": "a5312865-dc3f-4f6c-92c3-f442e4d473b6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "ATFtpQ22OhpQ"
       },
@@ -330,9 +330,10 @@
         "\n",
         "    return a model object\n",
         "    \"\"\"\n",
-        "    main_input = Input(shape=(50, 20, 1),\n",
+        "    x = Input(shape=(50, 20, 1),\n",
         "                       dtype='float32', name='main_input'\n",
         "                       )\n",
+        "    main_input = x\n",
         "\n",
         "    cnn_num = hp.Int('conv_blocks', 2, 6, default=3)\n",
         "    kernel_size = hp.Int('kernel_size', 3, 6, default=3)\n",
@@ -341,27 +342,24 @@
         "    # max the same number of dense layers as is the number of cnn layers\n",
         "    dense_num = hp.Int('dense_blocks', 2, cnn_num, default=3)\n",
         "\n",
-        "\n",
         "    for cnn_i in range(cnn_num):\n",
-        "\n",
         "        x = Conv2D(\n",
         "            # we increase number of filters by 32 in each layer\n",
-        "            filters=32*(cnn_i + 1),\n",
+        "            filters=32 * (cnn_i + 1),\n",
         "            kernel_size=(kernel_size, kernel_size),\n",
         "            padding=\"same\",\n",
         "            data_format=\"channels_last\",\n",
-        "            name=\"conv_\" + str(cnn_i + 1))(main_input)\n",
+        "            name=\"conv_\" + str(cnn_i + 1))(x)\n",
         "        x = LeakyReLU()(x)\n",
         "        x = BatchNormalization()(x)\n",
-        "        x = MaxPooling2D(pool_size=(pool_size, pool_size), name='Max_' + str(cnn_i + 1))(x)\n",
+        "        x = MaxPooling2D(pool_size=(pool_size, pool_size), padding='same', name='Max_' + str(cnn_i + 1))(x)\n",
         "        x = Dropout(rate=dropout_rate)(x)\n",
         "\n",
-        "    conv_flat = Flatten(name='2d_matrix')(x)\n",
+        "    x = Flatten(name='2d_matrix')(x)\n",
         "\n",
         "    for dense_i in range(dense_num):\n",
-        "\n",
         "        neurons = 32 * (cnn_num - dense_i)\n",
-        "        x = Dense(neurons)(conv_flat)\n",
+        "        x = Dense(neurons)(x)\n",
         "        x = LeakyReLU()(x)\n",
         "        x = BatchNormalization()(x)\n",
         "        x = Dropout(rate=dropout_rate)(x)\n",
@@ -375,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "AWiDvoooOhpR"
       },
@@ -414,31 +412,34 @@
     {
       "cell_type": "code",
       "source": [
+        "best_params = {}\n",
+        "\n",
         "for ratio in [1, 10, 100]:\n",
+        "    tuner = kt.BayesianOptimization(\n",
+        "      compile_model,\n",
+        "      objective=kt.Objective('val_prc', direction='max'),\n",
+        "      max_trials=100,\n",
+        "      seed=42,\n",
+        "      project_name='miRBind_' + str(ratio)\n",
+        "    )\n",
         "\n",
-        "  tuner = kt.Hyperband(\n",
-        "    compile_model,\n",
-        "    objective=kt.Objective('val_prc', direction='max'),\n",
-        "    max_epochs=15,\n",
-        "    hyperband_iterations=2,\n",
-        "    project_name='miRBind_' + str(ratio)\n",
-        "  )\n",
+        "    train_ohe, train_labels = load_data(ratio, train=True)\n",
+        "    val_ohe, val_labels = load_data(ratio, train=False)\n",
         "\n",
-        "  train_ohe, train_labels = load_data(ratio, train=True)\n",
-        "  val_ohe, val_labels = load_data(ratio, train=False)\n",
+        "    tuner.search(train_ohe, train_labels,\n",
+        "                 validation_data=(val_ohe, val_labels),\n",
+        "                 epochs=10,\n",
+        "                 callbacks=[tf.keras.callbacks.EarlyStopping(patience=3)],\n",
+        "                 batch_size=32,\n",
+        "                 class_weight={0: 1, 1: ratio}\n",
+        "                 )\n",
         "\n",
-        "  tuner.search(train_ohe, train_labels,\n",
-        "             validation_data=(val_ohe, val_labels),\n",
-        "             epochs=10,\n",
-        "             callbacks=[tf.keras.callbacks.EarlyStopping(patience=3)],\n",
-        "             batch_size=32,\n",
-        "            class_weight={0: 1, 1: ratio}\n",
-        "  )\n",
-        "  \n",
-        "  print(\"Best params for ratio\", ratio, \" are: \", tuner.get_best_hyperparameters(1)[0])\n",
+        "    print(\"Best params for ratio \", ratio, ' are: ', tuner.get_best_hyperparameters(1)[0].values)\n",
+        "    best_params[ratio] = tuner.get_best_hyperparameters(1)[0].values\n",
+        "    best_model = tuner.get_best_models(1)[0]\n",
+        "    best_model.save(\"model_1_\" + str(ratio) + \".h5\")\n",
         "\n",
-        "  best_model = tuner.get_best_models(1)[0]\n",
-        "  best_model.save(\"model_1_\" + str(ratio) + \".h5\")"
+        "print(best_params)"
       ],
       "metadata": {
         "id": "dNxA2f-lwKjZ"
